@@ -20,11 +20,14 @@
               </button>
               <div class="dropdown-content">
                   {% if user.role == 1 %}
-                  <a href="#" onclick="showHideQuiz()" id = "quizBtn">Quizzes</a>
+                     <a href="#" onclick="showHideQuiz()" id = "quizBtn">Quizzes</a>
+                     <a href="#" onclick= "showHideHmwk()" id = "hmwkBtn">Homeworks</a>
                   {% else %}
+
                   <a href="{%  url 'quiz_list' cid=course.id %}" id = "quizBtn">Quizzes</a>
+                  <a href="{% url 'homework_list' id=course.id %}"  id = "hmwkBtn">Homeworks</a>
+
                   {% endif %}
-                  <a href="#" onclick= "showHideHmwk()" id = "hmwkBtn">Homeworks</a>
                   <a href="#" id = "survBtn">Surveys</a>
               </div>
           </div>
