@@ -1,4 +1,5 @@
 - version: unreleased
+- Created Homework view pages and student upload assignment(@kh06089)
 - Created Survey forms(@Chino96)
 - Student can view grades(@Chino96)
 - Fixed course admin creation form(@Chino96)
